; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_wifi/src/extr_wifi_default.c_esp_netif_create_default_wifi_sta.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_wifi/src/extr_wifi_default.c_esp_netif_create_default_wifi_sta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @esp_netif_create_default_wifi_sta() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = call i32 (...) @ESP_NETIF_DEFAULT_WIFI_STA()
  store i32 %3, i32* %1, align 4
  %4 = call i32* @esp_netif_new(i32* %1)
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @assert(i32* %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @esp_netif_attach_wifi_station(i32* %7)
  %9 = call i32 (...) @esp_wifi_set_default_wifi_sta_handlers()
  %10 = load i32*, i32** %2, align 8
  ret i32* %10
}

declare dso_local i32 @ESP_NETIF_DEFAULT_WIFI_STA(...) #1

declare dso_local i32* @esp_netif_new(i32*) #1

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @esp_netif_attach_wifi_station(i32*) #1

declare dso_local i32 @esp_wifi_set_default_wifi_sta_handlers(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
